--- a/Formulario.html
+++ b/Formulario.html
@@ -12,7 +12,6 @@
     integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="diseño.css">
 </head>
-
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -49,40 +48,32 @@
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
               </form>
             </div>
-          </nav>
-    <!-- termino de nevbar -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="img/tipos-de-pintura-de-la-historia-del-arte.jpg" alt="First slide" width="100px" height="700px">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/escul.png" alt="Second slide" width="100px" height="700px">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/orf.jpg" alt="Third slide" width="100px" height="700px">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/tejido.jpg" alt="Four slide" width="100px" height="700px">
-          </div>
+          </nav> 
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Nombre</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Email</label>
+              <input type="password" class="form-control" id="exampleInputPassword1">
+            </div>
+            <label for="exampleInputPassword1">Contraseña</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+            <div class="form-check">
+        <div class="center">
+            <html>
+<body>
+
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = 'Registrado'">
+Registrar</button>
+
+<p id="demo"></p>
+
+</body>
+</html> 
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
     </div>
 </body>
-
-
 </html>
