--- a/galeria.html
+++ b/galeria.html
@@ -12,7 +12,6 @@
     integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="diseño.css">
 </head>
-
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -50,39 +49,51 @@
               </form>
             </div>
           </nav>
-    <!-- termino de nevbar -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="img/tipos-de-pintura-de-la-historia-del-arte.jpg" alt="First slide" width="100px" height="700px">
+
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="img/tipos-de-pintura-de-la-historia-del-arte.jpg" alt="Card image cap" width="100px" height="200px">
+                    <div class="card-body">
+                      <h5 class="card-title">Noche Estrellada</h5>
+                      <p class="card-text">Se lo robamos al oreja van goh</p>
+                      <a href="#" class="btn btn-primary">Mas información</a>
+                    </div>
+                  </div>
+              </div>
+              <div class="col-sm">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="img/escul.png" alt="Card image cap" width="100px" height="200px">
+                    <div class="card-body">
+                      <h5 class="card-title">David</h5>
+                      <p class="card-text">Robado de Miguel Angel</p>
+                      <a href="#" class="btn btn-primary">Mas información</a>
+                    </div>
+                  </div>
+              </div>
+              <div class="col-sm">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="img/orf.jpg" alt="Card image cap" width="100px" height="200px">
+                    <div class="card-body">
+                      <h5 class="card-title">Cadenas lindas</h5>
+                      <p class="card-text">joyeria muy linda hechas de oro</p>
+                      <a href="#" class="btn btn-primary">Mas información</a>
+                    </div>
+                  </div>
+              </div>
+              <div class="col-sm">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="img/tejido.jpg" alt="Card image cap" width="100px" height="200px">
+                    <div class="card-body">
+                      <h5 class="card-title">Tejido de la aweli mamá pollo</h5>
+                      <p class="card-text">Hechas con amor</p>
+                      <a href="#" class="btn btn-primary">Mas información</a>
+                    </div>
+                  </div>
+              </div>
+            </div>
           </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/escul.png" alt="Second slide" width="100px" height="700px">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/orf.jpg" alt="Third slide" width="100px" height="700px">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/tejido.jpg" alt="Four slide" width="100px" height="700px">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
     </div>
 </body>
-
-
 </html>
