--- a/noche.html
+++ b/noche.html
@@ -12,7 +12,6 @@
     integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="diseño.css">
 </head>
-
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -37,7 +36,7 @@
                     Categoria
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Pintura</a>
+                    <a class="dropdown-item" href="file:///C:/Users/plazavespucio/Documents/TipoPrueba/noche.html">Pintura</a>
                     <a class="dropdown-item" href="#">Escultura</a>
                     <a class="dropdown-item" href="#">Orfebreria</a>
                     <a class="dropdown-item" href="#">Tejido</a>
@@ -50,39 +49,22 @@
               </form>
             </div>
           </nav>
-    <!-- termino de nevbar -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="img/tipos-de-pintura-de-la-historia-del-arte.jpg" alt="First slide" width="100px" height="700px">
+          <div class="container">
+            <div class="row">
+                <div class="col"><img src="img/tipos-de-pintura-de-la-historia-del-arte.jpg" alt="pintura"></div>
+                <div class="col">
+                    <h2>Noche Estrellada </h2>
+                    <br>
+                    <p>La noche estrellada de van Gogh tiene su origen en un contexto histórico preciso, a saber, 
+                        la hospitalización del pintor en la clínica de Saint-Rémy de Provence en mayo de 1889. 
+                        Tras la ruptura en diciembre de 1888 de la relación con su amigo Gauguin –el acto desencadenante 
+                        de la famosa mutilación de la oreja izquierda– el pintor vive uno de sus períodos más oscuros y 
+                        acepta internarse en el instituto psiquiátrico. Paradójicamente, esta reclusión resulta ser un 
+                        período sumamente prolífico para van Gogh, que en un año de estadía crea más de ciento cincuenta 
+                        cuadros entre los que destaca La noche estrellada. </p>
+                </div>
+            </div>
           </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/escul.png" alt="Second slide" width="100px" height="700px">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/orf.jpg" alt="Third slide" width="100px" height="700px">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/tejido.jpg" alt="Four slide" width="100px" height="700px">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
     </div>
 </body>
-
-
 </html>
