--- a/Inicio.html
+++ b/Inicio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Incio</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" 
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <img class="Grupo Cero" src="img/images.jpg" alt="logo"width = "125px">
+            <img class="Grupo Cero" src="img/logo.jpg" alt="logo"width = "125px">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,24 +24,24 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="file:///C:/Users/plazavespucio/Documents/TipoPrueba/Artista.html">Inicio <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="file:///C:/Users/plazavespucio/Documents/da/TipoPrueba/Inicio.html">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="file:///C:/Users/plazavespucio/Documents/TipoPrueba/galeria.html">Galeria</a>
+                  <a class="nav-link" href="file:///C:/Users/plazavespucio/Documents/da/TipoPrueba/Producto.html">Producto</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="file:///C:/Users/plazavespucio/Documents/TipoPrueba/Formulario.html">Contacto</a>
+                    <a class="nav-link" href="file:///C:/Users/plazavespucio/Documents/da/TipoPrueba/Contacto.html">Contacto</a>
                   </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Categoria
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Pintura</a>
-                    <a class="dropdown-item" href="#">Escultura</a>
-                    <a class="dropdown-item" href="#">Orfebreria</a>
-                    <a class="dropdown-item" href="#">Tejido</a>
-                  </div>
+                    <a class="dropdown-item" href="file:///C:/Users/plazavespucio/Documents/da/TipoPrueba/Notebook.html">Notebook</a>
+                    <a class="dropdown-item" href="file:///C:/Users/plazavespucio/Documents/da/TipoPrueba/Escritorio.html">Escritorio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="dropdown-item" href="file:///C:/Users/plazavespucio/Documents/da/TipoPrueba/Carrito.html"><img src="img/carrito.jpg" alt="carrito"width = "35 px"></a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
@@ -60,16 +60,16 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="img/tipos-de-pintura-de-la-historia-del-arte.jpg" alt="First slide" width="100px" height="700px">
+            <img class="d-block w-100" src="img/2000395240607-1.jpg" alt="First slide" width="100px" height="700px">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/escul.png" alt="Second slide" width="100px" height="700px">
+            <img class="d-block w-100" src="img/2000399198454_2.jpg" alt="Second slide" width="100px" height="700px">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/orf.jpg" alt="Third slide" width="100px" height="700px">
+            <img class="d-block w-100" src="img/Computadores-tercera.jpg" alt="Third slide" width="100px" height="700px">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/tejido.jpg" alt="Four slide" width="100px" height="700px">
+            <img class="d-block w-100" src="img/departamento-laptops-tienda-tecnologia-compra-laptop_245974-2709.avif" alt="Four slide" width="100px" height="700px">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
